[package]
name = "pcc"
version = "0.1.0"
authors = ["plavelo <plastic.velocity@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = "3.0.0-beta.2"

[dev-dependencies]
assert_cmd = "1"
tempfile = "3"
uuid = { version = "0.8", features = ["v4"] }
